# bitcoin

portfolio-tool/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  SECURITY.md  pyproject.toml
portfolio-tool/app/: __init__.py  cli.py  config.py  decision_engine.py  money.py
portfolio-tool/app/dashboard/: app.py
portfolio-tool/app/data/: __init__.py  contracts.py  fixtures.py  loader.py  market_data.py  normalize.py  quality.py
portfolio-tool/app/execution/: __init__.py  vwap.py
portfolio-tool/app/goal/: __init__.py  concentration.py  income_sleeve.py  monte_carlo.py  objective.py  trajectory.py
portfolio-tool/app/momentum/: __init__.py  engine.py  throttle.py
portfolio-tool/app/opportunities/: __init__.py  screener.py
portfolio-tool/app/options/: __init__.py  chains.py  covered_call_engine.py  leaps_screener.py  payoff.py
portfolio-tool/app/portfolio/: __init__.py  exposure.py  holding_evaluator.py  reconciliation.py  replacement_engine.py
portfolio-tool/app/reports/: __init__.py  compliance.py  exposure_report.py  goal_report.py  markdown.py  memos.py  run_all.py  tables.py  writer.py
portfolio-tool/app/schwab_client/: __init__.py  auth.py  client.py  errors.py  models.py  parse.py  rate_limit.py
portfolio-tool/app/scoring/: __init__.py
portfolio-tool/config/: decision_thresholds.yaml  dividend_overrides.yaml  goal_plan.yaml  holding_overrides.yaml  income_sleeve.yaml  momentum.yaml  risk_budget.yaml  scoring_weights.yaml  settings.example.yaml  sleeve_classifications.yaml  watchlists.yaml
portfolio-tool/config/examples/: arcc_repair_case.yaml
portfolio-tool/docs/: architecture.md  calculations.md  data_contracts.md  decision_methodology.md  risk_disclosures.md  schwab_setup.md  setup.md  troubleshooting.md
portfolio-tool/tests/: conftest.py
portfolio-tool/tests/integration/: test_run_all.py  test_trajectory_run.py
portfolio-tool/tests/unit/: test_arcc_guard.py  test_cli.py  test_compliance.py  test_config.py  test_contracts.py  test_decision_engine.py  (+15 more)
(+10 files in other folders)
